Added repo link to the presentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -43,6 +43,7 @@
 			<div class="slides">
 				<section>
 					<h1>Change Detection</h1>
+                    <a href="https://github.com/tmakuch/change-detection">https://github.com/tmakuch/change-detection</a>
 				</section>
 
                 <section class="stack">
